--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,29 @@
             <artifactId>testng</artifactId>
             <version>7.7.0</version>
         </dependency>
+        <!-- для отчёта в Allure API -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+
+        <!-- для отправки API -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+
+        </dependency>
+
+        <!-- для отправки API -->
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.6.3</version>
+
+        </dependency>
+
 
     </dependencies>
     <build>
