--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
             <version>3.6.3</version>
 
         </dependency>
+        <!-- для сериализации и десериализации ответов от сервера в переменные -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+        <!-- для слодных ассертов  особенно для поджоо класса -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.19.0</version>
+        </dependency>
 
 
     </dependencies>
